<resources>
    <string name="app_name">NHK program api</string>
    <string name="cancel">キャンセル</string>
    <string name="serch">検索</string>
    <string name="sougou">総合</string>
    <string name="etele">Eテレ</string>
    <string name="bs">BS1</string>
    <string name="bs_premium">BSプレミアム</string>
    <string name="live_in">居住地</string>
    <string name="residence">residence</string>
    <string name="app_title">わしはテレビはNHKしか見ん</string>
    <string name="subtitle">サブタイトル</string>
    <string name="actor">演者</string>
    <string name="detail">詳細</string>

</resources>